Expo - Make any app. Run it everywhere

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -298,6 +298,21 @@
       </li> 
 
       <li>
+        <a href="https://expo.io/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://expo.io/" target="_blank">Expo</a>
+          </h2>
+          <p>Make any app. Run it everywhere</p>
+        </div>
+        <a class="resource-button" href="https://expo.io/" target="_blank">Veja</a>
+      </li> 
+
+      <li>
         <a href="http://whatismyscreenresolution.net/multi-screen-test" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="#" />
@@ -1785,6 +1800,21 @@
           <p>Free Unlimited Web Hosting</p>
         </div>
         <a class="resource-button" href="https://infinityfree.net/" target="_blank">Veja</a>
+      </li>  
+
+      <li>
+        <a href="https://firebase.google.com/products-build" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/firebase.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://firebase.google.com/products-build" target="_blank">Firebase</a>
+          </h2>
+          <p>Hospedagem, Realtime Database</p>
+        </div>
+        <a class="resource-button" href="https://firebase.google.com/products-build" target="_blank">Veja</a>
       </li>  
 
       <div class="linha"></div>
