Codificando e-mail marketing sem problemas

--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -387,6 +387,21 @@
             <a class="resource-button" href="https://email-pontofrio-training1.netlify.com/" target="_blank">Veja</a>
           </li>
 
+          <li>
+            <a href="https://sounoob.com.br/codificando-e-mail-marketing-sem-problemas/?fbclid=IwAR3L_XnfY1bWWtl_Axt8vERGFxMGMoNKuVAN0AbxBeowJL2PJPS3K51S1qs" target="_blank">
+              <div class="resource-icon">
+                <img src="../../base/images/portfolios.jpg" />              
+              </div>
+            </a>
+            <div class="resource-details">
+              <h2>
+                <a href="https://sounoob.com.br/codificando-e-mail-marketing-sem-problemas/?fbclid=IwAR3L_XnfY1bWWtl_Axt8vERGFxMGMoNKuVAN0AbxBeowJL2PJPS3K51S1qs" target="_blank">Codificando e-mail marketing sem problemas</a>
+              </h2>
+              <p>Codificando e-mail marketing sem problemas</p>              
+            </div>
+            <a class="resource-button" href="https://sounoob.com.br/codificando-e-mail-marketing-sem-problemas/?fbclid=IwAR3L_XnfY1bWWtl_Axt8vERGFxMGMoNKuVAN0AbxBeowJL2PJPS3K51S1qs" target="_blank">Veja</a>
+          </li>
+
         </ul>
         
         <ul class="sidebar-navigation">
