Pantheon - Wordpress Host Free Trial

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1816,6 +1816,22 @@
         </div>
         <a class="resource-button" href="https://firebase.google.com/products-build" target="_blank">Veja</a>
       </li>  
+      </li>  
+
+      <li>
+        <a href="https://firebase.google.com/products-build" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/pantheon.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://firebase.google.com/products-build" target="_blank">Pantheon</a>
+          </h2>
+          <p>Wordpress Host Free Trial</p>
+        </div>
+        <a class="resource-button" href="https://firebase.google.com/products-build" target="_blank">Veja</a>
+      </li>  
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-frontend">Banco de Dados Free</h2>
