Ferramenta para criar documentações - GitBook

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -666,7 +666,7 @@
           <p><mark><a href="http://getbem.com/introduction/" target="_blank">BEM</a></mark>, <mark><a href="http://oocss.org/" target="_blank">OOCSS</a></mark>, <mark><a href="http://rscss.io/" target="_blank">RSCSS</a></mark>, DRY CSS, SMACSS, Atomic Design</p>
         </div>
         <a class="resource-button" href="http://blog.caelum.com.br/comecando-a-organizar-seu-css/" target="_blank">Veja</a>        
-        <div id="bibliotecas"></div>
+        <div id="#"></div>
       </li>
 
       <div class="linha"></div>        
@@ -701,6 +701,7 @@
           <p>We’re not designing pages, we’re designing systems of components.—Stephen Hay</p>
         </div>
         <a class="resource-button" href="https://bradfrost.com/blog/post/atomic-web-design/" target="_blank">Veja</a>        
+        <div id="bibliotecas"></div>    
       </li>
 
       <div class="linha"></div>        
@@ -1831,6 +1832,7 @@
           <p>Wordpress Host Free Trial</p>
         </div>
         <a class="resource-button" href="https://firebase.google.com/products-build" target="_blank">Veja</a>
+        <div id="bancos"></div>
       </li>  
 
       <div class="linha"></div>
@@ -2400,6 +2402,26 @@
           <p>Documentação do Emmet</p>
         </div>
         <a class="resource-button" href="https://docs.emmet.io/cheat-sheet/" target="_blank">Veja</a>
+        <div id="criar-documentacao"></div>
+      </li>
+
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-frontend">Criar Documentações</h2>
+      <div class="linha"></div>
+      
+      <li>
+        <a href="https://www.gitbook.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.gitbook.com/" target="_blank">GitBook</a>
+          </h2>
+          <p>Where software teams break knowledge silos</p>
+        </div>
+        <a class="resource-button" href="https://www.gitbook.com/" target="_blank">Veja</a>
         <div id="utilitarios"></div>
       </li>
 
@@ -4219,6 +4241,7 @@
       <li><a class="scroll" href="#bancos">Banco de Dados</a></li>      
       <li><a class="scroll" href="#html-forms">HTML Forms</a></li>      
       <li><a class="scroll" href="#documentacao">Documentações</a></li>
+      <li><a class="scroll" href="#criar-documentacao">Criar Documentações</a></li>
       <li><a class="scroll" href="#utilitarios">Utilitários</a></li>
       <li><a class="scroll" href="#acessibilidade">Acessibilidade</a></li>
       <li><a class="scroll" href="#blogs">Blogs</a></li>
