Obsidian - A second brain, for you, forever

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -2422,6 +2422,21 @@
           <p>Where software teams break knowledge silos</p>
         </div>
         <a class="resource-button" href="https://www.gitbook.com/" target="_blank">Veja</a>
+      </li>
+      
+      <li>
+        <a href="https://obsidian.md/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://obsidian.md/" target="_blank">Obsidian</a>
+          </h2>
+          <p>A second brain, for you, forever.</p>
+        </div>
+        <a class="resource-button" href="https://obsidian.md/" target="_blank">Veja</a>
         <div id="utilitarios"></div>
       </li>
 
