--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-69311922-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-69311922-1');
+  </script>
+
   <meta name="theme-color" content="#515151">
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <title>Robson Designer</title>
