Animated Icon Library

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1654,7 +1654,6 @@
           <p>Minimalistic icon library Designed by code. Customizable & Retina-Ready icons — entirely built in CSS</p>
         </div>
         <a class="resource-button" href="https://css.gg/" target="_blank">Veja</a>        
-        <div id="pre-processors"></div>
       </li>  
       
       <li>
@@ -1670,6 +1669,21 @@
           <p>900+ animated icons to make your projects exceptional.</p>
         </div>
         <a class="resource-button" href="https://icons8.com/animated-icons" target="_blank">Veja</a>        
+      </li>  
+      
+      <li>
+        <a href="https://lordicon.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://lordicon.com/" target="_blank">lordicon</a>
+          </h2>
+          <p>Animated Icon Library</p>
+        </div>
+        <a class="resource-button" href="https://lordicon.com/" target="_blank">Veja</a>        
         <div id="pre-processors"></div>
       </li>  
 
