--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1185,6 +1185,26 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://thispersondoesnotexist.com/" target="_blank">Veja</a>
       </li>
 
+      <div class="linha"></div>
+      <h2 class="margen-titulo color-design">Mockups</h2>
+      <div class="linha"></div>
+
+      
+      <li>
+        <div class="resource-icon">
+          <a href="https://things.morflax.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://things.morflax.com/" target="_blank">Morflex</a>
+          </h2>
+          <p>A better way to present design - Generate 3D device mockup in a quick and engaging way.</p>
+        </div>
+        <a class="resource-button" href="https://things.morflax.com/" target="_blank">Veja</a>
+      </li>
+
 
     </ul>
       <ul class="sidebar-navigation">
