--- a/cv/index.html
+++ b/cv/index.html
@@ -739,15 +739,14 @@
       <div class="row cv-section">
         <div class="span3">
           <div class="cv-section-title titulo-habilidades">
-            <h2>Habilidades</h2>
+            <h2>Conhecimentos</h2>
           </div>
           <!-- end .cv-section-title -->
-        </div>
-        <div class="esp-tituto-habilidades"><br><br><br></div>
+        </div>        
         
         <!-- end .span3 -->
               
-        <div class="box-barras">
+        <div class="box-barras span9">
           <svg aria-hidden="true" focusable="false" data-prefix="fab" data-icon="html5" class="svg-skills" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><path fill="currentColor" d="M0 32l34.9 395.8L191.5 480l157.6-52.2L384 32H0zm308.2 127.9H124.4l4.1 49.4h175.6l-13.6 148.4-97.9 27v.3h-1.1l-98.7-27.3-6-75.8h47.7L138 320l53.5 14.5 53.7-14.5 6-62.2H84.3L71.5 112.2h241.1l-4.4 47.7z"></path></svg>
 
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="svg-skills" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 32 32" style="enable-background:new 0 0 32 32;" xml:space="preserve">
