Update email and phone number - cv robsondesigner

--- a/cv/index.html
+++ b/cv/index.html
@@ -48,14 +48,14 @@
   <div id="wrap">
     <div id="header">      
       <div class="row cv-section">
-        <div class="span9">
+        <div class="span8">
           <div class="cv-section-title">            
             <h1>Robson Vinicius de Oliveira
               <small>Designer UI/UX | Front End | Marketing</small>
             </h1>
           </div>          
         </div>        
-        <div class="span3">
+        <div class="span4">
           <div class="cv-item">
             <div class="social-media fixed">                                
               <a href="https://www.linkedin.com/in/robson-vinicius" target="_blank" class="linkedin-icon social-icon">
@@ -69,7 +69,8 @@
               </a>                                
             </div>
             <p class="last">
-              <span class="hidden-tablet"></span>robsonvinicius@outlook.com.br<br>(41) 9 8832 2873 | Claro              
+              <i class="fas fa-envelope"></i> <span class="ml-5">robsonvinicius@outlook.com.br</span><br>
+              <i class="fas fa-mobile-alt ml-3"></i> <span class="ml-7">(41) 9 8832 2873 | Claro</span>
             </p>
           </div>          
         </div>        
