Update contact media queries

--- a/cv/index.html
+++ b/cv/index.html
@@ -69,8 +69,8 @@
               </a>                                
             </div>
             <p class="last">
-              <i class="fas fa-envelope"></i> <span class="ml-5">robsonvinicius@outlook.com.br</span><br>
-              <i class="fas fa-mobile-alt ml-3"></i> <span class="ml-7">(41) 9 8832 2873 | Claro</span>
+              <i class="fas fa-envelope"></i> <span class="ml-5 contact-mail">robsonvinicius@outlook.com.br</span><br>
+              <i class="fas fa-mobile-alt ml-3"></i> <span class="ml-7 contact-phone">(41) 9 8832 2873 | Claro</span>
             </p>
           </div>          
         </div>        
