Update icon prototype

--- a/cv/index.html
+++ b/cv/index.html
@@ -532,7 +532,7 @@
             <div class="prototipo-area2">
               <a href="https://xd.adobe.com/view/36b8bc57-3fa7-4a43-6919-7055991716dd-4089/" target="_blank">
                 <p class="btn-portfolio">
-                  <i class="fas fa-mobile-alt fa-3x" aria-hidden="true"></i>
+                  <i class="fas fa-mobile fa-3x" aria-hidden="true"></i>
                 </p>
               </a>  
             </div>
