--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -152,7 +152,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://www.ffonts.net/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Font Squirrel" />
+						<img src="../../base/images/ffonts.jpg" alt="Font Squirrel" />
 					</a>
 				</div>
 				<div class="resource-details">
