Update Thumbnail Font Base

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -165,7 +165,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://fontba.se/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Font Squirrel" />
+						<img src="../../base/images/fontbase.jpg" alt="Font Squirrel" />
 					</a>
 				</div>
 				<div class="resource-details">
