--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -334,7 +334,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://betterwebtype.com/combining-fonts-guide" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Canva Fonts Combinations" />
+						<img src="../../base/images/better-web-type.jpg" alt="Canva Fonts Combinations" />
 					</a>
 				</div>
 				<div class="resource-details">
