Cufon Fonts Thumbnail

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -347,7 +347,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://www.cufonfonts.com/font/bariol-regular-2" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Canva Fonts Combinations" />
+						<img src="../../base/images/cufon-fonts.jpg" alt="Canva Fonts Combinations" />
 					</a>
 				</div>
 				<div class="resource-details">
