--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   <div class="intro-text">
     <div class="front-image"></div>
     <h1 class="wow fadeInDown"><strong>Robson Vinicius <br> <span class="color">Designer</span></strong></h1>
-    <p class="wow fadeInDown">Designer | UX/UI | Front End | SEO<br>Rankeie bem com estratégias de Marketing Digital<br><strong>S</strong>earch <strong>E</strong>ngine <strong>O</strong>ptimization: Otimização para buscas</p>
+    <p class="wow fadeInDown text-hero">Criação de materiais gráficos<br> Gerenciamento de Redes Sociais<br> Edição de Vídeo e Criação de Sites</p>
     <li class="btn-portfolio"><a href="#works-section" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Portfolio</a> </li>
   </div> <!--a href="#works-section-->
 </header>
