--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
     <p class="wow fadeInDown text-hero">Criação de materiais gráficos<br> Gerenciamento de Redes Sociais<br> Edição de Vídeo e Criação de Sites</p>
     <li class="btn-portfolio"><a href="#works-section" target="_blank" class="btn btn-default btn-lg page-scroll wow fadeInUp" data-wow-delay="200ms">Portfolio</a> </li>
   </div> <!--a href="#works-section-->
+  <div class="social-icons-banner fa-lg">
+    <a href="https://api.whatsapp.com/send?phone=+55(41)%2098832%202873&text=Ol%C3%A1,%20Robson" target="_blank"><i class="fa fa-whatsapp"></i></a>
+    <a href="https://twitter.com/robsonviniciusr" target="_blank"><i class="fa fa-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/robson-vinicius" target="_blank"><i class="fa fa-linkedin"></i></a>
+  </div>
 </header>
 
 <!-- Services Section -->
