--- a/cv/index.html
+++ b/cv/index.html
@@ -26,7 +26,7 @@
   <link rel="stylesheet" href="css/grid.css">
   <link rel="stylesheet" href="css/elements.css">
   <link rel="stylesheet" href="css/layout.css">
-  <link rel="stylesheet" href="css/red.css">
+  <link rel="stylesheet" href="css/theme.css">
         
   <!-- JS Plugins CSS  -->
   <link rel="stylesheet" href="js/bxslider/jquery.bxslider.css">
