--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1380,6 +1380,19 @@
 
 			<li>
 				<div class="resource-icon">
+					<a href="https://socialsizes.io/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://socialsizes.io/" target="_blank">Social Sizes</a> </h2>
+					<p>Social Media sizes 2022 + Templates</p>
+				</div>
+				<a class="resource-button" href="https://socialsizes.io/" target="_blank">Veja</a>
+			</li>
+
+			<li>
+				<div class="resource-icon">
 					<a href="http://www.pixeden.com/psd-mock-up-templates" target="_blank">
 						<img src="../../base/images/pixeden.jpg" alt="Retro Vectors" />
 					</a>
