--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1416,6 +1416,21 @@
 
 			<li>
 				<div class="resource-icon">
+					<a href="https://freeillustrations.xyz/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> 
+						<a href="https://freeillustrations.xyz/" target="_blank">Free Illustrations</a>
+					</h2>
+					<p>Find Free To Use Image Illustrations</p>
+				</div>
+				<a class="resource-button" href="https://freeillustrations.xyz/" target="_blank">Veja</a>								
+			</li>
+
+			<li>
+				<div class="resource-icon">
 					<a href="https://www.humaaans.com/?fbclid=IwAR0H0uoWakJc0-AgJVE_d2cFqCZ3LE0uBZ4Vy9EbBM1Ekyz6KR6bshGWMak" target="_blank">
 						<img src="../../base/images/portfolios.jpg" alt="Retro Vectors" />
 					</a>
