--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1133,6 +1133,19 @@
 				</div>
 				<a class="resource-button" href="https://freenaturestock.com/" target="_blank">Veja</a>
 			</li>
+			
+			<li>
+				<div class="resource-icon">
+					<a href="https://www.rawpixel.com/" target="_blank">
+						<img src="../../base/images/portfolios.jpg" alt="Resource Cards" />
+					</a>
+				</div>
+				<div class="resource-details">
+					<h2> <a href="https://www.rawpixel.com/" target="_blank">Raw Pixel</a> </h2>
+					<p>Free Imagens</p>
+				</div>
+				<a class="resource-button" href="https://www.rawpixel.com/" target="_blank">Veja</a>
+			</li>
 
 			<li>
 				<div class="resource-icon">
