Shopify - The platform commerce is built on

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3903,6 +3903,21 @@
       </li>
 
       <li>
+        <a href="https://www.shopify.com/" target="_blank">
+          <div class="resource-icon">
+            <img src="https://scontent.fcwb2-1.fna.fbcdn.net/v/t1.0-1/p148x148/12507464_1505737369722638_8969977578519242296_n.png?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=r3ih8dqpsMwAX_bUJ7O&_nc_ht=scontent.fcwb2-1.fna&oh=a22dba900dabc07a9accca51bb08c5b1&oe=5FC668D6" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.shopify.com/" target="_blank">Shopify</a>
+          </h2>
+          <p>The platform commerce is built on</p>
+        </div>
+        <a class="resource-button" href="https://www.shopify.com/" target="_blank">Veja</a>   
+      </li>
+
+      <li>
         <a href="https://github.com/braziljs/eloquente-javascript" target="_blank">
           <div class="resource-icon">
             <img src="https://raw.githubusercontent.com/braziljs/eloquente-javascript/master/img/eloq-js.png" alt="#" />
