Correção erros tag body

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 </head>
 
-<body oncontextmenu="return false" onselectstart="return false" ondragstart="return false">
+<body oncontextmenu="false" onselectstart="false" ondragstart="false">
 
 <div class="front-image"></div>
 
