--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1150,6 +1150,22 @@ and share your amazing creations in a matter of minutes.</p>
 
       <li>
         <div class="resource-icon">
+          <a href="https://uxplanet.org/15-ux-goldmines-from-experts-for-mastering-design-methods-266b0b9bedd8" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://uxplanet.org/15-ux-goldmines-from-experts-for-mastering-design-methods-266b0b9bedd8" target="_blank">15 UX Goldmines from experts for mastering design methods
+            </a>
+          </h2>
+          <p>UX Planet</p>
+        </div>
+        <a class="resource-button" href="https://uxplanet.org/15-ux-goldmines-from-experts-for-mastering-design-methods-266b0b9bedd8" target="_blank">Veja</a>
+      </li>
+
+      <li>
+        <div class="resource-icon">
           <a href="https://thispersondoesnotexist.com/" target="_blank">
             <img src="../../base/images/portfolios.jpg" alt="#" />
           </a>
