Advanced Figma tips & tricks

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -885,6 +885,21 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://designmodo.com/repeat-grid-adobe-xd/" target="_blank">Veja</a>
       </li>      
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://uxplanet.org/advanced-figma-tips-tricks-d782ba2b2f5c" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://uxplanet.org/advanced-figma-tips-tricks-d782ba2b2f5c" target="_blank">Advanced Figma tips & tricks</a>
+          </h2>
+          <p>UX Planet</p>
+        </div>
+        <a class="resource-button" href="https://uxplanet.org/advanced-figma-tips-tricks-d782ba2b2f5c" target="_blank">Veja</a>
+      </li>      
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Inspiração</h2>
       <div class="linha"></div>
