--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics 4 New Version -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-69311922-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="index, follow">
 
-  <script>//Google Analytics 
+  <script>//Google Analytics Old
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -237,7 +237,8 @@
                 <h4>Projeto</h4>
                 Branding
                 <div class="clearfix"></div>
-                <i class="fa fa-plus"></i> </div>
+                <i class="fa fa-plus"></i> 
+              </div>
               <img src="img/portfolio/07.jpg" class="img-responsive" alt="Project Title"> </a> </div>
           </div>
         </div>
