--- a/my/paginas/seo/index.html
+++ b/my/paginas/seo/index.html
@@ -496,6 +496,21 @@
         </div>
         <a class="resource-button" href="https://morningscore.io/seo-glossary/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <a href="https://pt.semrush.com/blog/checklist-de-seo-melhores-praticas/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://pt.semrush.com/blog/checklist-de-seo-melhores-praticas/" target="_blank">Checklist SEO</a>
+          </h2>
+          <p>Glossário de SEO - Morning Score</p>
+        </div>
+        <a class="resource-button" href="https://pt.semrush.com/blog/checklist-de-seo-melhores-praticas/" target="_blank">Veja</a>
+      </li>
          
     </ul>
 
