Style Stage - A modern CSS showcase styled by community contributions

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3933,6 +3933,21 @@
       </li>
 
       <li>
+        <a href="https://stylestage.dev/" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://stylestage.dev/" target="_blank">Style Stage</a>
+          </h2>
+          <p>A modern CSS showcase styled by community contributions</p>
+        </div>
+        <a class="resource-button" href="https://stylestage.dev/" target="_blank">Veja</a>   
+      </li>
+
+      <li>
         <a href="https://github.com/braziljs/eloquente-javascript" target="_blank">
           <div class="resource-icon">
             <img src="https://raw.githubusercontent.com/braziljs/eloquente-javascript/master/img/eloq-js.png" alt="#" />
