Javascript - MDN Web docs

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -3948,6 +3948,21 @@
       </li>
 
       <li>
+        <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript?fbclid=IwAR3cMJld5gO-OXj3gQdnOngCErW9X-sGpsIYN2qYkNr-zXZ_pNU9x4R1Xqk" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript?fbclid=IwAR3cMJld5gO-OXj3gQdnOngCErW9X-sGpsIYN2qYkNr-zXZ_pNU9x4R1Xqk" target="_blank">Javascript</a>
+          </h2>
+          <p>MDN web docs</p>
+        </div>
+        <a class="resource-button" href="https://developer.mozilla.org/pt-BR/docs/Web/JavaScript?fbclid=IwAR3cMJld5gO-OXj3gQdnOngCErW9X-sGpsIYN2qYkNr-zXZ_pNU9x4R1Xqk" target="_blank">Veja</a>   
+      </li>
+
+      <li>
         <a href="https://github.com/braziljs/eloquente-javascript" target="_blank">
           <div class="resource-icon">
             <img src="https://raw.githubusercontent.com/braziljs/eloquente-javascript/master/img/eloq-js.png" alt="#" />
