Guia de otimização de pesquisa - Central de  Pesquisa Google

--- a/my/paginas/seo/index.html
+++ b/my/paginas/seo/index.html
@@ -511,6 +511,21 @@
         </div>
         <a class="resource-button" href="https://pt.semrush.com/blog/checklist-de-seo-melhores-praticas/" target="_blank">Veja</a>
       </li>
+
+      <li>
+        <a href="https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=pt-br&visit_id=637412407819318856-3589988129&rd=1&fbclid=IwAR1yFe7Tn4reC4ScaAfirOd2KpITQcLs0aPnZK4gOsqHL8-Wcks7Q54aLqs" target="_blank">
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=pt-br&visit_id=637412407819318856-3589988129&rd=1&fbclid=IwAR1yFe7Tn4reC4ScaAfirOd2KpITQcLs0aPnZK4gOsqHL8-Wcks7Q54aLqs" target="_blank">Guia de otimização de mecanismos de pesquisa (SEO) para iniciantes</a>
+          </h2>
+          <p>Central da Pesquisa Google</p>
+        </div>
+        <a class="resource-button" href="https://developers.google.com/search/docs/beginner/seo-starter-guide?hl=pt-br&visit_id=637412407819318856-3589988129&rd=1&fbclid=IwAR1yFe7Tn4reC4ScaAfirOd2KpITQcLs0aPnZK4gOsqHL8-Wcks7Q54aLqs" target="_blank">Veja</a>
+      </li>
          
     </ul>
 
