Exemplo email marketing loja Pichau

--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -152,6 +152,21 @@
       <div class="linha"></div>
 
       <li>
+        <a href="https://mailchi.mp/pichau/melhores-ofertas-262732?e=0d8d035741" target="_blank"></a>
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="email marketing 1" />          
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://mailchi.mp/pichau/melhores-ofertas-262732?e=0d8d035741" target="_blank">Pichau</a>
+          </h2>
+          <p>Exemplo e-mail marketing Loja Pichau</p>
+        </div>
+        <a class="resource-button" href="https://mailchi.mp/pichau/melhores-ofertas-262732?e=0d8d035741" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://www.pontofrio-imagens.com.br/html/news/parceiros/2017/intermail/20171018/4d0b48201140/index.html?59e68" target="_blank"></a>
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="email marketing 1" />          
