Exemplo e-mail marketing Netshoes

--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -167,6 +167,21 @@
       </li>
 
       <li>
+        <a href="https://view.mailmkt.netshoes.com.br/?qs=e6e41778f221d979e00f0c27c05cad8a186d81e81c64a8ad215ad09921e8d88e64b427d5af1085ddff3bbe0fb5702b5a59c3a4fe882c2a67643babfa3c05647a0b051e1c1125ed6761f215169d21fca7" target="_blank"></a>
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="email marketing 1" />          
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://view.mailmkt.netshoes.com.br/?qs=e6e41778f221d979e00f0c27c05cad8a186d81e81c64a8ad215ad09921e8d88e64b427d5af1085ddff3bbe0fb5702b5a59c3a4fe882c2a67643babfa3c05647a0b051e1c1125ed6761f215169d21fca7" target="_blank">Netshows</a>
+          </h2>
+          <p>Exemplo e-mail marketing Netshoes</p>
+        </div>
+        <a class="resource-button" href="https://view.mailmkt.netshoes.com.br/?qs=e6e41778f221d979e00f0c27c05cad8a186d81e81c64a8ad215ad09921e8d88e64b427d5af1085ddff3bbe0fb5702b5a59c3a4fe882c2a67643babfa3c05647a0b051e1c1125ed6761f215169d21fca7" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://www.pontofrio-imagens.com.br/html/news/parceiros/2017/intermail/20171018/4d0b48201140/index.html?59e68" target="_blank"></a>
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="email marketing 1" />          
