Exemplo email marketing ponto

--- a/my/paginas/emailMkt/index.html
+++ b/my/paginas/emailMkt/index.html
@@ -182,6 +182,21 @@
       </li>
 
       <li>
+        <a href="https://view.novidade.pontofrio.com.br/?qs=c5f066c813aeafe495cbe8f9bfda93db81203ae144dadbe39f52a3e69d410b2959168e4115df7043b0eb538bee5f51c88e4fb1bbe4014fe2e3b03bae9fb372046ccaa095379b783fdb157002b3dbada1" target="_blank"></a>
+          <div class="resource-icon">
+            <img src="../../base/images/portfolios.jpg" alt="email marketing 1" />          
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://view.novidade.pontofrio.com.br/?qs=c5f066c813aeafe495cbe8f9bfda93db81203ae144dadbe39f52a3e69d410b2959168e4115df7043b0eb538bee5f51c88e4fb1bbe4014fe2e3b03bae9fb372046ccaa095379b783fdb157002b3dbada1" target="_blank">Netshows</a>
+          </h2>
+          <p>Exemplo e-mail marketing Ponto</p>
+        </div>
+        <a class="resource-button" href="https://view.novidade.pontofrio.com.br/?qs=c5f066c813aeafe495cbe8f9bfda93db81203ae144dadbe39f52a3e69d410b2959168e4115df7043b0eb538bee5f51c88e4fb1bbe4014fe2e3b03bae9fb372046ccaa095379b783fdb157002b3dbada1" target="_blank">Veja</a>
+      </li>
+
+      <li>
         <a href="https://www.pontofrio-imagens.com.br/html/news/parceiros/2017/intermail/20171018/4d0b48201140/index.html?59e68" target="_blank"></a>
           <div class="resource-icon">
             <img src="../../base/images/portfolios.jpg" alt="email marketing 1" />          
