Correção link Pantheon

--- a/my/paginas/frontend/index.html
+++ b/my/paginas/frontend/index.html
@@ -1834,18 +1834,18 @@
       </li>  
 
       <li>
-        <a href="https://firebase.google.com/products-build" target="_blank">
+        <a href="https://pantheon.io/product/wordpress-hosting" target="_blank">
           <div class="resource-icon">
             <img src="../../base/images/pantheon.jpg" alt="#" />
           </div>
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://firebase.google.com/products-build" target="_blank">Pantheon</a>
+            <a href="https://pantheon.io/product/wordpress-hosting" target="_blank">Pantheon</a>
           </h2>
           <p>Wordpress Host Free Trial</p>
         </div>
-        <a class="resource-button" href="https://firebase.google.com/products-build" target="_blank">Veja</a>
+        <a class="resource-button" href="https://pantheon.io/product/wordpress-hosting" target="_blank">Veja</a>
         <div id="bancos"></div>
       </li>  
 
