Glossário UX - Áreas correlatas

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -76,6 +76,25 @@
       </li>
 
       <div class="linha"></div>
+      <h2 class="margen-titulo color-design">Glossário</h2>
+      <div class="linha"></div>
+      
+      <li>
+        <a href="https://ant.design/ " target="_blank">
+          <div class="resource-icon">
+            <img src="https://pbs.twimg.com/profile_images/938972621432950785/IlLvcIX6_400x400.jpg" alt="#" />          
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://ant.design/ " target="_blank">Glossário Áreas correlatas</a>
+          </h2>
+          <p>Glossário Essencial para UX Designers: áreas correlatas - Mergo Redação</p>
+        </div>
+        <a class="resource-button" href="https://ant.design/ " target="_blank">Veja</a>
+      </li>
+
+      <div class="linha"></div>
       <h2 class="margen-titulo color-design">Ferramentas</h2>
       <div class="linha"></div>
 
