Glossário Essencial para UX Designers: ferramenta

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -93,6 +93,21 @@
         </div>
         <a class="resource-button" href="https://ant.design/ " target="_blank">Veja</a>
       </li>
+      
+      <li>
+        <a href="https://uxdesign.blog.br/gloss%C3%A1rio-essencial-para-ux-designers-ferramentas-722dc29a0386" target="_blank">
+          <div class="resource-icon">
+            <img src="https://pbs.twimg.com/profile_images/938972621432950785/IlLvcIX6_400x400.jpg" alt="#" />          
+          </div>
+        </a>
+        <div class="resource-details">
+          <h2>
+            <a href="https://uxdesign.blog.br/gloss%C3%A1rio-essencial-para-ux-designers-ferramentas-722dc29a0386" target="_blank">Glossário Ferramentas</a>
+          </h2>
+          <p>Glossário Essencial para UX Designers: ferramentas - Mergo Redação</p>
+        </div>
+        <a class="resource-button" href="https://uxdesign.blog.br/gloss%C3%A1rio-essencial-para-ux-designers-ferramentas-722dc29a0386" target="_blank">Veja</a>
+      </li>
 
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Ferramentas</h2>
