Correção link - Glossário Áras correlatas UX

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -87,7 +87,7 @@
         </a>
         <div class="resource-details">
           <h2>
-            <a href="https://ant.design/ " target="_blank">Glossário Áreas correlatas</a>
+            <a href="https://uxdesign.blog.br/gloss%C3%A1rio-essencial-para-ux-designers-%C3%A1reas-correlatas-7447fb88ee7d" target="_blank">Glossário Áreas correlatas</a>
           </h2>
           <p>Glossário Essencial para UX Designers: áreas correlatas - Mergo Redação</p>
         </div>
