--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -82,7 +82,7 @@
       <li>
         <a href="https://ant.design/ " target="_blank">
           <div class="resource-icon">
-            <img src="https://pbs.twimg.com/profile_images/938972621432950785/IlLvcIX6_400x400.jpg" alt="#" />          
+            <img src="../../base/images/portfolios.jpg" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -97,7 +97,7 @@
       <li>
         <a href="https://uxdesign.blog.br/gloss%C3%A1rio-essencial-para-ux-designers-ferramentas-722dc29a0386" target="_blank">
           <div class="resource-icon">
-            <img src="https://pbs.twimg.com/profile_images/938972621432950785/IlLvcIX6_400x400.jpg" alt="#" />          
+            <img src="../../base/images/portfolios.jpg" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
@@ -112,7 +112,7 @@
       <li>
         <a href="https://uxdesign.blog.br/gloss%C3%A1rio-essencial-para-ux-designers-apps-c965c928a716?source=social.tw" target="_blank">
           <div class="resource-icon">
-            <img src="https://pbs.twimg.com/profile_images/938972621432950785/IlLvcIX6_400x400.jpg" alt="#" />          
+            <img src="../../base/images/portfolios.jpg" alt="#" />          
           </div>
         </a>
         <div class="resource-details">
