--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1305,6 +1305,22 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://www.atlassian.com/blog/teamwork/video-games-can-help-your-team-work-smarter-no-seriously" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://lawsofux.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://lawsofux.com/" target="_blank">Laws of UX
+            </a>
+          </h2>
+          <p>Laws of UX is a collection of best practices that designers can consider when building user interfaces</p>
+        </div>
+        <a class="resource-button" href="https://lawsofux.com/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Figma</h2>
       <div class="linha"></div>
