--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1321,6 +1321,22 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://lawsofux.com/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://uxarchive.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://uxarchive.com/" target="_blank">UX Archive
+            </a>
+          </h2>
+          <p>UXArchive is the leading destination to find mobile UX trends from the world’s top mobile apps</p>
+        </div>
+        <a class="resource-button" href="https://uxarchive.com/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Figma</h2>
       <div class="linha"></div>
