--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1337,6 +1337,22 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://uxarchive.com/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://humanebydesign.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://humanebydesign.com/" target="_blank">Humane by Design
+            </a>
+          </h2>
+          <p>A resource that provides guidance for designing ethically humane digital products through patterns focused on user well-being.</p>
+        </div>
+        <a class="resource-button" href="https://humanebydesign.com/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Figma</h2>
       <div class="linha"></div>
