Learn UX - Site

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1353,6 +1353,22 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://humanebydesign.com/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://learnux.io/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://learnux.io/" target="_blank">Learn UX
+            </a>
+          </h2>
+          <p>The Basics, Design Workflow, Design &amp; Prototype, Handoff &amp; Tools, HTML and CSS, Webflow, .</p>
+        </div>
+        <a class="resource-button" href="https://learnux.io/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Figma</h2>
       <div class="linha"></div>
