UX Starter Pack

--- a/my/paginas/ux/index.html
+++ b/my/paginas/ux/index.html
@@ -1369,6 +1369,22 @@ and share your amazing creations in a matter of minutes.</p>
         <a class="resource-button" href="https://learnux.io/" target="_blank">Veja</a>
       </li>
 
+      <li>
+        <div class="resource-icon">
+          <a href="https://uxstarterpack.com/" target="_blank">
+            <img src="../../base/images/portfolios.jpg" alt="#" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://uxstarterpack.com/" target="_blank">UX Starter Pack
+            </a>
+          </h2>
+          <p>Resources for the independent doer to break into UX</p>
+        </div>
+        <a class="resource-button" href="https://uxstarterpack.com/" target="_blank">Veja</a>
+      </li>
+
       <div class="linha"></div>
       <h2 class="margen-titulo color-design">Figma</h2>
       <div class="linha"></div>
