--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -2159,7 +2159,7 @@
 			<li>
 				<a href="https://cursos.timtec.com.br/" target="_blank">
 					<div class="resource-icon">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p148x148/12993353_909861422444529_6773033912990293596_n.jpg?_nc_cat=106&ccb=2&_nc_sid=1eb0c7&_nc_ohc=cVF-IjTGI20AX_1xqIV&_nc_ht=scontent.fbfh14-2.fna&tp=6&oh=ab761b5fb0e892639ab5708223d8e424&oe=6014C25A" alt="Cursos" />
+						<img src="../../base/images/timtec.jpg" alt="Cursos" />
 					</div>
 				</a>
 				<div class="resource-details">
