--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -360,7 +360,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://fontmeme.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="Font Meme" />
+						<img src="../../base/images/font-meme.jpg" alt="Font Meme" />
 					</a>
 				</div>
 				<div class="resource-details">
