--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -703,7 +703,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://margaret2.github.io/pantone-colors/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="#" />
+						<img src="../../base/images/pantone-colors.jpg" alt="#" />
 					</a>
 				</div>
 				<div class="resource-details">
