--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -373,7 +373,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://ifonts.xyz/basic/sans-serif" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="iFonts" />
+						<img src="../../base/images/ifonts.jpg" alt="iFonts" />
 					</a>
 				</div>
 				<div class="resource-details">
