--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -386,7 +386,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://fontesk.com/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="iFonts" />
+						<img src="../../base/images/fontesk.jpg" alt="iFonts" />
 					</a>
 				</div>
 				<div class="resource-details">
