Color Space Thumbnail Update

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -716,7 +716,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="https://mycolor.space/" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="#" />
+						<img src="../../base/images/colorspace.jpg" alt="#" />
 					</a>
 				</div>
 				<div class="resource-details">
