Paletton Thumbnail Update

--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -729,7 +729,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://paletton.com/#uid=1000u0kllllaFw0g0qFqFg0w0aF" target="_blank">
-						<img src="../../base/images/portfolios.jpg" alt="#" />
+						<img src="../../base/images/paletton.jpg" alt="#" />
 					</a>
 				</div>
 				<div class="resource-details">
