--- a/my/paginas/apoio/index.html
+++ b/my/paginas/apoio/index.html
@@ -1355,7 +1355,7 @@
 			<li>
 				<div class="resource-icon">
 					<a href="http://www.designculture.com.br/10-boxes-planificadas-em-eps-totalmente-gratis-1" target="_blank">
-						<img src="https://scontent.fbfh14-2.fna.fbcdn.net/v/t1.0-1/p148x148/49184543_2476772522338289_2418004654219591680_o.jpg?_nc_cat=109&ccb=3&_nc_sid=1eb0c7&_nc_ohc=hSr6f75hxdMAX-0vF01&_nc_ht=scontent.fbfh14-2.fna&tp=6&oh=955558e442e54d59b6f3c01442716af4&oe=60510FAE" alt="Retro Vectors" />
+						<img src="../../base/images/design-culture.webp" alt="Retro Vectors" />
 					</a>
 				</div>
 				<div class="resource-details">
