--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -29,7 +29,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://robsonvinicius.github.io/site-bootstrap4/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="site de arquitetura" />
+            <img src="../../base/images/site-bootstrap4.jpg" alt="site de arquitetura" />
           </a>
         </div>
         <div class="resource-details">
