--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -204,7 +204,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.hostinger.com.br/afiliados" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="site de arquitetura" />
+            <img src="../../base/images/hostinger.jpg" alt="site de arquitetura" />
           </a>
         </div>
         <div class="resource-details">
