--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -215,6 +215,21 @@
         </div>
         <a class="resource-button" href="https://www.hostinger.com.br/afiliados" target="_blank">Veja</a>
       </li>   
+              
+      <li>
+        <div class="resource-icon">
+          <a href="https://associados.amazon.com.br/" target="_blank">
+            <img src="../../base/images/associados-amazon.jpg" alt="site de arquitetura" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://associados.amazon.com.br/" target="_blank">Associados Amazon</a>
+          </h2>
+          <p>Recomende produtos. Ganhe comissões</p>          
+        </div>
+        <a class="resource-button" href="https://associados.amazon.com.br/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
