--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -44,7 +44,7 @@
       <li>
         <div class="resource-icon">
           <a href="https://robsonvinicius.github.io/site-materialize-framework/" target="_blank">
-            <img src="../../base/images/portfolios.jpg" alt="site de arquitetura" />
+            <img src="../../base/images/site-materialize.jpg" alt="site de arquitetura" />
           </a>
         </div>
         <div class="resource-details">
