--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -230,6 +230,22 @@
         </div>
         <a class="resource-button" href="https://associados.amazon.com.br/" target="_blank">Veja</a>
       </li>   
+              
+      <li>
+        <div class="resource-icon">
+          <a href="https://www.magazinevoce.com.br/" target="_blank">
+            <img src="../../base/images/associados-amazon.jpg" alt="site de arquitetura" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://www.magazinevoce.com.br/" target="_blank">Parceiro Magalu</a>
+          </h2>
+          <p>Através da nossa loja online grátis, você vende na internet e recebe comissões<br>
+          para realizar os seus sonhos.</p>          
+        </div>
+        <a class="resource-button" href="https://www.magazinevoce.com.br/" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
