Thumbnail Parceiro Magalu

--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -234,14 +234,14 @@
       <li>
         <div class="resource-icon">
           <a href="https://www.magazinevoce.com.br/" target="_blank">
-            <img src="../../base/images/associados-amazon.jpg" alt="site de arquitetura" />
+            <img src="../../base/images/parceiro-magalu.jpg" alt="site de arquitetura" />
           </a>
         </div>
         <div class="resource-details">
           <h2>
             <a href="https://www.magazinevoce.com.br/" target="_blank">Parceiro Magalu</a>
           </h2>
-          <p>Através da nossa loja online grátis, você vende na internet e recebe comissões<br>
+          <p>Através da nossa loja online grátis, você vende na internet<br> e recebe comissões
           para realizar os seus sonhos.</p>          
         </div>
         <a class="resource-button" href="https://www.magazinevoce.com.br/" target="_blank">Veja</a>
