--- a/my/paginas/sites/index.html
+++ b/my/paginas/sites/index.html
@@ -276,6 +276,21 @@
         </div>
         <a class="resource-button" href="https://www.eduzz.com/pt-br" target="_blank">Veja</a>
       </li>   
+              
+      <li>
+        <div class="resource-icon">
+          <a href="https://monetizze.com.br/afiliados" target="_blank">
+            <img src="../../base/images/monetizze.jpg" alt="site de arquitetura" />
+          </a>
+        </div>
+        <div class="resource-details">
+          <h2>
+            <a href="https://monetizze.com.br/afiliados" target="_blank">Afiliado Monetizze</a>
+          </h2>
+          <p>Com a Monetizze o afiliado tem certeza de que será comissionado em cada venda</p>          
+        </div>
+        <a class="resource-button" href="https://monetizze.com.br/afiliados" target="_blank">Veja</a>
+      </li>   
   
               
     </ul>
